src/test/wacc/invalid/semanticErr/function/doubleArgDef.wacc
# functions cannot define the same argument twice

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int foo(int x, int x) is
	return x
  end

  skip
end